# player_tracker_test

./: .gitignore  main.py  main_video_parallel.py  pyproject.toml  run_parallel.sh  run_video_pipeline.ps1  run_video_pipeline.sh  setup_linux.sh
plugins/calibration/: pyproject.toml
sn_gamestate/callbacks/: progress.py  save_results.py
sn_gamestate/configs/: gta_link_pipeline_example.yaml  soccernet.yaml  soccernet_test.yaml  soccernet_test1.yaml  soccernet_test2.yaml  soccernet_test3.yaml
sn_gamestate/configs/dataset/: video.yaml  video2.yaml
sn_gamestate/configs/engine/: offline.yaml  video.yaml
sn_gamestate/configs/modules/bbox_detector/: yolo_ultralytics.yaml
sn_gamestate/configs/modules/generate_tracklets/: generate_tracklets.yaml
sn_gamestate/configs/modules/refine_tracklets/: refine_tracklets.yaml
sn_gamestate/configs/modules/reid/: prtreid_onnx.yaml
sn_gamestate/configs/modules/track/: bpbreid_strong_sort.yaml
sn_gamestate/configs/visualization/: colors.yaml  gamestate.yaml  tracklet_visualization.yaml
sn_gamestate/engine/: online_inference.py  video_inference.py
sn_gamestate/gta_link/: generate_tracklets.py  map_tracklets_sequences.py  refine_tracklets.py  refine_tracklets_batched.py
sn_gamestate/gta_link/tools/: draw_tracklets.ipynb
sn_gamestate/gta_link/utils/: feature_extractor.py  feature_extractor_onnx.py
sn_gamestate/reid/: prtreid_api.py  prtreid_onnx_api.py
sn_gamestate/tools/: feature_extractor.py  feature_extractor_onnx.py  transforms.py
sn_gamestate/utils/: frame_extractor.py  save_tracklets_MOT.py  video_splitter.py
sn_gamestate/visualization/: __init__.py  pitch.py  players.py  visualization_engine_custom.py
sn_gamestate/wrappers/: __init__.py
sn_gamestate/wrappers/bbox_detector/: yolo_onnx_api.py  yolo_ultralytics_api.py
sn_gamestate/wrappers/dataset/: external_video.py
sn_gamestate/wrappers/gta_link/: README.md  __init__.py  generate_tracklets_api.py  refine_tracklets_api.py
