[project]
name = "tracklab-calibration"
version = "1.0.2"
description = ""
authors = [
    {name="Victor Joos", email="victor.joos@uclouvain.be"}
]
requires-python = ">=3.9,<3.13"


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sn_calibration_baseline", "tvcalib", "nbjw_calib"]
